--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netflix- Watch Movies and TV shows</title>
+    <link rel="icon" href ="https://github.com/SenaOzcn/Netflix-webPage/blob/MIT-License/netflix.png" type="image/x-icon"/>
     <link rel="stylesheet" href="./style.css"></link>
     <script src="script.js"></script>
 </head>
